@startuml
title Stays4Pilgrims - Database Entity-Relationship Diagram

entity "Account (accounts)" as account {
  * id : INT <<PK>>
  * email : VARCHAR(255) <<UQ>>
  * name : VARCHAR(255)
  * user_type : ENUM (normal, admin)
  * is_email_verified : BOOLEAN
}

entity "Accommodation" as Accommodation {
  * id : INT <<PK>>
  * Accommodation_name : VARCHAR(255)
  * status : ENUM (pending, approved, rejected)
  * approved_at : TIMESTAMP
  * rejection_reason : VARCHAR(500)
  account_id : INT <<FK>>
  Accommodation_category_id : INT <<FK>>
  camino_id : INT <<FK>>
  stage_id : INT <<FK>>
}

entity "AccommodationCategory (Accommodation_categories)" as AccommodationCategory {
  * id : INT <<PK>>
  * name : VARCHAR(100) <<UQ>>
}

entity "Comment (comments)" as comment {
  * id : INT <<PK>>
  * rating : INT (1-5)
  * comment : TEXT
  * status : ENUM (pending, approved, rejected)
  * approved_at : TIMESTAMP
  * rejection_reason : VARCHAR(500)
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
  account_id : INT <<FK>>
  Accommodation_id : INT <<FK>>
}

entity "GalleryPhoto (gallery_photos)" as gallery_photo {
  * id : INT <<PK>>
  * photo_url : TEXT
  * status : ENUM (pending, approved, rejected)
  * approved_at : TIMESTAMP
  * rejection_reason : VARCHAR(500)
  * created_at : TIMESTAMP
  account_id : INT <<FK>>
  Accommodation_id : INT <<FK>>
}

entity "Favorite (favorites)" as favorite {
  * id : INT <<PK>>
  * created_at : TIMESTAMP
  account_id : INT <<FK>>
  Accommodation_id : INT <<FK>>
}

entity "AccommodationPrice" as AccommodationPrice {
  * id : INT <<PK>>
  * description : VARCHAR
  * price : DECIMAL(10,2)
  Accommodation_id : INT <<FK>>
}

entity "AccommodationRemovalRequest" as AccommodationRemovalRequest {
  * id : INT <<PK>>
  * Accommodation_name : VARCHAR(255)
  * requester_name : VARCHAR(255)
  * requester_email : VARCHAR(255)
  * reason : TEXT
  * status : ENUM (pending, approved, rejected)
  * created_at : TIMESTAMP
  * reviewed_at : TIMESTAMP
  * rejection_reason : VARCHAR(500)
  account_id : INT <<FK>>
  Accommodation_id : INT <<FK>>
}

entity "AccommodationEditRequest" as AccommodationEditRequest {
  * id : INT <<PK>>
  * requester_name : VARCHAR(255)
  * requester_email : VARCHAR(255)
  * payload : JSON
  * status : ENUM (pending, approved, rejected)
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
  * reviewed_at : TIMESTAMP
  * rejection_reason : VARCHAR(500)
  account_id : INT <<FK>>
  Accommodation_id : INT <<FK>>
}

entity "Camino (caminos)" as camino {
  * id : INT <<PK>>
  * name : VARCHAR(100) <<UQ>>
}

entity "Stage (stages)" as stage {
  * id : INT <<PK>>
  * name : VARCHAR(100)
  camino_id : INT <<FK>>
}

' Relationships
account ||--o{ Accommodation : "owns"
account ||--o{ comment : "writes"
account ||--o{ gallery_photo : "uploads"
account ||--o{ favorite : "marks"
account ||--o{ AccommodationRemovalRequest : "requests"
account ||--o{ AccommodationEditRequest : "requests"

AccommodationCategory ||--o{ Accommodation : "categorizes"
Accommodation ||--o{ comment : "receives"
Accommodation ||--o{ gallery_photo : "contains"
Accommodation ||--o{ favorite : "marked_in"
Accommodation ||--o{ AccommodationPrice : "has_prices"
Accommodation ||--o{ AccommodationRemovalRequest : "subject_of"
Accommodation ||--o{ AccommodationEditRequest : "subject_of"
Accommodation }o--|| camino : "located_in"
Accommodation }o--|| stage : "mapped_to"

camino ||--o{ stage : "contains"

@enduml

